--- a/meson.build
+++ b/meson.build
@@ -13,5 +13,6 @@ rdiff_backup_dep = find_program('rdiff-backup')
 run_target('schema-uninstall', command : 'schema-uninstall.sh')
 run_target('schema-install', command : 'schema-install.sh')
 
-
+run_target('desktop-install', command : 'desktop-install')
+run_target('desktop-uninstall', command : 'desktop-uninstall')
 
