--- a/meson.build
+++ b/meson.build
@@ -10,8 +10,8 @@ python_dep = find_program('python3')
 rdiff_backup_dep = find_program('rdiff-backup')
 
 
-run_target('schema-uninstall', command : 'schema-uninstall.sh')
-run_target('schema-install', command : 'schema-install.sh')
+run_target('schema-uninstall', command : 'schema-uninstall')
+run_target('schema-install', command : 'schema-install')
 
 run_target('desktop-install', command : 'desktop-install')
 run_target('desktop-uninstall', command : 'desktop-uninstall')
